--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,22 @@
 {
   "name": "hotel-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Hotel Booking System Backend",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mongoose": "^9.0.0"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
