--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://hotel_admin:Hote11234@cluster0.dnzmrme.mongodb.net/hotel?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=supersecret123
 PORT=5000
