--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
+    "react-datepicker": "^9.0.0",
     "react-dom": "^18.3.1"
   }
 }
